--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactlife",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://matt23488.github.io/ReactLife",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -18,10 +19,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && xcopy /e/h/y/q \"./build\" \"./docs\\\" > nul 2>&1",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "poop": "xcopy /e/h/y/q \"./src\" \"./srccp\\\" > nul 2>&1"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
